Comments added to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <!--Header and Description-->
     <h1>Seth Leslie</h1>
     <h2>About:</h2>
     <h3>
@@ -19,6 +20,7 @@
       to computer science in general.
     </h3>
 
+    <!--Skills and Knowledge-->
     <h2>Skills and knowledge:</h2>
     <ul>
       <li>Programming: Java, JavaScript, HTML, C++, Python</li>
@@ -27,6 +29,7 @@
       <li>Software: Wireshark</li>
     </ul>
 
+    <!--Certifications-->
     <h2>Certifications:</h2>
     <ul>
       <li>
@@ -37,6 +40,7 @@
       </li>
     </ul>
 
+    <!--Github Link-->
     <h2>Github:</h2>
     <a href="https://github.com/S-Leslie00"> Github Link </a>
   </body>
