projects.html created and linked to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+
+    <!--Link to the projects page-->
+    <a href="projects.html"> Projects </a>
+
     <!--Header and Description-->
     <h1>Seth Leslie</h1>
     <h2>About:</h2>
