styles.css updated; image added to projects page

--- a/html_and_css/projects.html
+++ b/html_and_css/projects.html
@@ -8,15 +8,22 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <!--Link to go to the home page-->
+    <a href="index.html"> Home </a>
+
     <!--Page Title-->
     <h1>Projects</h1>
 
     <!--Titles and descriptions of projects-->
     <h2>This Website</h2>
-    <h3>
+    <h class="normal">
       The website you are currently viewing was programmed in HTML. I hope that
       over time I can continue to make updates to this site as my skillset
       grows.
     </h3>
+
+    <!--Screenshot of web development-->
+    <img src="website_screenshot_1.jpg" alt="Website Development Screenshot">
+
   </body>
 </html>
